--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
-        "slim/twig-view": "^2.2"
+        "slim/twig-view": "^2.2",
+        "slim/pdo": "~1.9",
+        "symfony/yaml": "^3.3"
     },
     "autoload-dev": {
         "psr-4": {
